--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,222 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto);
 
 
-@media (max-width: 1500px) {
-	#mobileButton
-	{
-	display: none;
-	}
-	
-	#leftProfile
-	{
-	float: left;
-    width: 250px;  
-    height: 100%;
-	background-color: #B51845;
-	}
-	
-	#mobileLogo
-	{
-	display: none;
-	}
-	
-	#leftProfile> ul
-	{
-    list-style: none;
-    width: 150px;
-    height: 400px;
-    padding: 0;
-    margin-left: auto;
-    margin-right: auto;
-
-	}
-
-	#leftProfile> ul>li 
-	{
-		height: 50px;
-		margin-bottom: 30px;
-		line-height: 50px;
-		text-align: center;
-		border: 0;
-		background-color: #EEEEEE;
-		border-radius: 5px;
-		height: 50px;
-		cursor: pointer;
-	}
-
-	#leftProfile >ul> li:hover 
-	{
-		border: 0;
-		background-color: #4285F4;
-		border-radius: 5px;
-		height: 50px;
-		cursor: pointer;
-	}
-}
-@media (max-width: 800px) {
-	#mobileButton
-	{
-	display: none;
-	}
-
-	#leftProfile
-	{
-	float: left;
-	width: 250px;  
-    height: 100%;
-	background-color: #B51845;
-	}
-	
-	#mobileLogo
-	{
-	display: none;
-	}
-	
-	#leftProfile> ul
-	{
-    list-style: none;
-    width: 150px;
-    height: 400px;
-    padding: 0;
-    margin-left: auto;
-    margin-right: auto;
-
-	}
-
-	#leftProfile> ul>li 
-	{
-		height: 50px;
-		margin-bottom: 30px;
-		line-height: 50px;
-		text-align: center;
-		border: 0;
-		background-color: #EEEEEE;
-		border-radius: 5px;
-		height: 50px;
-		cursor: pointer;
-	}
-
-	#leftProfile >ul> li:hover 
-	{
-		border: 0;
-		background-color: #4285F4;
-		border-radius: 5px;
-		height: 50px;
-		cursor: pointer;
-	}
-}
-@media (max-width: 450px) {
-	#mobileButton
-	{
-	position: relative;
-	top: 9px;
-	left: 9px;
-	display: block;
-	width: 30px;
-	height: 30px;
-	background-image: url("../img/icons/menu2.png");
-	float: left;
-	border: none;
-	}
-	
-	#mobileButton:hover
-	{
-	cursor: pointer;
-	}
-	
-	#mobileMenu:hover
-	{
-	cursor: auto;
-	}
-	
-	#mobileMenu
-	{
-	display: none;
-	position: absolute;
-	top: 41px;
-	left: -1px;
-	width: 200px;
-	border: 1px solid #B51845;
-	text-align: center;
-	background-color: white;
-	}
-	
-	#mobileMenu ul
-	{
-	list-style-type: none;
-	margin-left: -15px;
-	width: 150px;
-	}
-	
-	#mobileMenu li
-	{
-	margin-left: none;
-	background-color: white;
-	border: 1px solid black;
-	border-radius: 3px;
-	height: 30px;
-	margin-bottom: 10px;
-	line-height: 30px;
-	}
-	
-	#mobileMenu ul li:last-child
-	{
-	background-color: #E8E8E8;
-	font-style: white;
-	}
-	
-	#mobileMenu ul li:first-child
-	{
-	border: none;
-	width: 60px;
-	height: 60px;
-	position: relative;
-	left: 45px;
-	}
-	
-	#mobileMenu ul li:nth-child(2)
-	{
-	border: none;
-	font-size: 1.5em;
-	}
-
-	.header
-	{
-	display: none;
-	}
-	
-	#leftProfile
-	{
-	position: fixed;
-	top: 3px;
-	width: 100%;
-	height: 50px;
-	box-shadow: 0 5px 17px 0 rgba(0, 0, 0, 0.2);
-	background-color: white;
-	border-bottom: 2px solid #B51845;
-	z-index: 1;
-	}
-	
-	#mobileLogo
-	{
-	display: block;
-	position: relative;
-	float: right;
-	}
-	
-	#profileMenu
-	{
-	display: none;
-	}
-	
-	#rightProfile
-	{
-	clear: both;
-	position: relative;
-	top: 70px;
-	}
-}
-
 *{
 
     
@@ -393,6 +177,54 @@ height: 500px;
     
         position: relative; 
   z-index: 1; /* The z-index should be higher than Google Maps */
+}
+
+
+#leftProfile{
+    float: left;
+    background-color: #B51845;
+    width: 250px;  
+    height: 100%;
+}
+
+
+
+#leftProfile> ul{
+    list-style: none;
+    width: 150px;
+    height: 400px;
+    padding: 0;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+
+#leftProfile> ul>li {
+    height: 50px;
+    margin-bottom: 30px;
+    line-height: 50px;
+    text-align: center;
+    
+    
+        border: 0;
+    background-color: #EEEEEE;
+
+    border-radius: 5px;
+    height: 50px;
+    
+    cursor: pointer;
+}
+
+
+#leftProfile >ul> li:hover {
+    border: 0;
+    background-color: #4285F4;
+
+    border-radius: 5px;
+    height: 50px;
+    
+    cursor: pointer;
 }
 
 
