--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -410,6 +410,7 @@ body,html {
         width:100%
     }
 
+
     #menu li:Not(:first-child) {
         background-color:#E9E9E9;
         text-align:center;
@@ -419,7 +420,18 @@ body,html {
         width:100%;
         height:60px
     }
+    #menu li:nth-child(2){
+        background-color:#E9E9E9;
+        text-align:center;
+        font-family:'Roboto',sans-serif;
+        line-height:60px;
+        float:right;
+        width:100%;
+        height:90px;
+        padding-top:5px;
+        padding-bottom: 5px;
 
+    }
     #menu li:Not(:first-child) a {
         display:block;
         color:#000;
