--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -344,7 +344,7 @@ body,html {
 		height:29px;
 		line-height:29px;
 		width:100px;
-		border-radius:10px;
+		border-radius:5px;
 		margin:auto;
 		text-align:center;
 		background:white;
@@ -355,6 +355,7 @@ body,html {
 	{
 		background:#9f123a;
 		color:white;
+           box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.4);
 		cursor: pointer;
 		border:solid white;
 	}
@@ -424,7 +425,7 @@ body,html {
 		height:40px;
 		line-height:40px;
 		width:200px;
-		border-radius:15px;
+		border-radius:5px;
 		margin-top:10px;
 		text-align:center;
 		background:white;
@@ -433,10 +434,11 @@ body,html {
 	}
 	.profileButton:hover
 	{
-		background:#9f123a;
-		color:white;
+		
+		color:#9f123a;
 		cursor: pointer;
-		border:solid white;
+	
+           box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.4);
 	}
 	.profileButton> a
 	{
@@ -448,7 +450,7 @@ body,html {
 	}
 	.profileButton> a:hover
 	{
-		color:#FFFFFF;
+		color:#9f123a;
 	}
 
 
@@ -541,7 +543,8 @@ body,html {
 	}
 
 	.forms>input[type=submit]:hover {
-		background-color:#DD2C00;
+		background-color:#DD2C00;      
+        box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.4);
 		border:1px #DD2C00 solid
 	}
 
