--- a/assests/css/normal/style.css
+++ b/assests/css/normal/style.css
@@ -46,6 +46,38 @@ body,html {
 		display:none
 	}
 
+
+/*---------------------- Events ------------------*/
+
+
+
+#events{
+    
+    width: 100%;
+    height: 100%;
+    list-style: none;
+    
+}
+
+#events >li{
+padding: 10px;
+    width: 150px;
+    height: 300px;
+    float: left;
+	box-shadow: 0 5px 17px 0 rgba(0, 0, 0, 0.2);
+    margin-right: 20px;
+    background-color: white;
+    text-align: center;
+    text-overflow:ellipsis;
+    
+    margin-bottom: 30px;
+    text-align: center;
+
+    
+}
+
+
+
 /*----------Mobile----------*/
 
 .header {
@@ -67,7 +99,7 @@ body,html {
 	display: block;
 	width: 30px;
 	height: 30px;
-	background-image: url("../img/icons/menu2.png");
+	background-image: url("../../img/icons/menu2.png");
 	float: left;
 	border: none;
 }
@@ -149,14 +181,22 @@ body,html {
 	
 #rightProfile{
 	clear: both;
-	position: relative;
+	
 	top: 70px;
-	width: 100%;
+position: absolute;
+    z-index: 2;
+
+			width: -moz-calc(100% - 270px);
+			width: -webkit-calc(100% - 270px);
+			width: calc(100% - 270px);
+			margin-left:270px;
+			height:auto;
+			margin-top: 100px;
+		
 }
 
 .meetStaff{
     width: 100%;
-    background-color: white;
     color: #B51845;
 }
 
@@ -185,7 +225,8 @@ body,html {
 		width:229px;
 		height:84px;
 		margin-left:auto;
-		margin-right:auto
+		margin-right:auto;
+            margin-top:0px;
 	}
 
 	#wrapper {
@@ -260,12 +301,12 @@ body,html {
 	}
 	#facebook
 	{
-		background-image: url("../img/icons/facebook.png");
+		background-image: url("../../img/icons/facebook.png");
 		background-size: cover;
 	}
 	#twitter
 	{
-		background-image: url("../img/icons/twitter.png");
+		background-image: url("../../img/icons/twitter.png");
 		background-size: cover;
 	}
 
@@ -276,21 +317,9 @@ body,html {
 
 		text-align:center;
 		height:35px;
-		margin-top:25px;
+		margin-top:0px;
 		float:left;
 		position:relative;
-	}
-	#logo
-	{
-		height:84px;
-		line-height:30px;
-		width:294px;
-		margin: auto;
-		position: absolute;
-		top: 0;
-		left: 0;
-		bottom: 0;
-		right: 0;
 	}
 
 	#logOutBox
@@ -299,6 +328,7 @@ body,html {
 		text-align:center;
 		height:35px;
 		margin-top:20px;
+        margin-bottom: -25px;
 		float:left;
 		position:relative;
 	}
@@ -957,16 +987,7 @@ body,html {
 		}
 
 
-		/*right profile set up*/
-		#rightProfile
-		{
-			width: -moz-calc(100% - 270px);
-			width: -webkit-calc(100% - 270px);
-			width: calc(100% - 270px);
-			margin-left:270px;
-			height: auto;
-			margin-top: 100px;
-		}
+	
 	
 }
 
