--- a/assests/css/normal/style.css
+++ b/assests/css/normal/style.css
@@ -828,15 +828,24 @@ img.trainerImg
     list-style:none;
     min-height:100%;
     height:auto;
+    margin-top: 200px;
     margin-left:auto;
     margin-right:auto;
 	overflow:hidden;
 }
 
 #booking>li {
+    padding: 10px;
     position:static;
+
     float:left;
+    margin-bottom: 300px;
     margin-right:30px
+}
+#booking>li>form>input{
+    width: 100%;
+    height: 35px;
+    margin-bottom: 10px;
 }
 
 #booking>li>table {
@@ -885,7 +894,11 @@ padding: 10px;
 
 /*---------------------- END - ´Events ------------------*/
 
-
+#singleTrainers{
+ 
+    margin-top: 100px;
+    
+}
 
 /* ------------ Settings ---------- */
 
