--- a/assests/css/mobile/style.css
+++ b/assests/css/mobile/style.css
@@ -30,10 +30,11 @@ input {
 	position: fixed;
 	top: 1px;
 	width: 100%;
-	height: 50px;
+	height:90px;
 	box-shadow: 0 5px 17px 0 rgba(0, 0, 0, 0.2);
 	background-color: white;
 	border-bottom: 2px solid #B51845;
+    margin-bottom: 40px;
 	z-index: 2;
 }
 
@@ -204,7 +205,7 @@ input {
 	display: block;
 	width: 30px;
 	height: 30px;
-	background-image: url("C:\xampp\htdocs\Third-Year-Group-Project\assests\img\iconsmenu2.png");
+	background-image: url("../../img/icons/menu2.png");
 	background-color: grey;
 	float: right;
 	border: none;
