--- a/assests/css/normal/style.css
+++ b/assests/css/normal/style.css
@@ -421,7 +421,7 @@ position: absolute;
 			width: calc(100% - 260px);
 		margin-left: 260px;
 			height:auto;
-			margin-top: 100px;
+			margin-top: 150px;
 
 		
 }
@@ -824,28 +824,20 @@ img.trainerImg
 /*   for the booking page */
 
 #booking {
-    width:700px;
+  padding: 0px;
+    width: 40%;
+    min-width:300px;
     list-style:none;
     min-height:100%;
     height:auto;
-    margin-top: 200px;
     margin-left:auto;
     margin-right:auto;
 	overflow:hidden;
 }
 
 #booking>li {
-    padding: 10px;
-    position:static;
-
+    position:relative;
     float:left;
-    margin-bottom: 300px;
-    margin-right:30px
-}
-#booking>li>form>input{
-    width: 100%;
-    height: 35px;
-    margin-bottom: 10px;
 }
 
 #booking>li>table {
@@ -856,7 +848,8 @@ img.trainerImg
 #booking>li:not(:first-child) {
     width:400px;
     height:auto;
-    margin-bottom:30px
+    margin-bottom:30px;
+  margin-left: 25px;
 }
 
 
@@ -894,11 +887,7 @@ padding: 10px;
 
 /*---------------------- END - ´Events ------------------*/
 
-#singleTrainers{
- 
-    margin-top: 100px;
-    
-}
+
 
 /* ------------ Settings ---------- */
 
@@ -965,3 +954,28 @@ display:none;
 
 
 /*End Hide Mobile set up for big screen*/
+
+/*peters tests*/
+
+#setTime{
+  width: 40%;
+  min-width: 180px;
+  
+}
+#setTime input, #setTime select {
+  width: 90% ;
+  min-width: 180px;
+  margin-top: 10px;
+  padding: 5px;
+  vertical-align: middle;
+}
+#trainerId{
+  width: calc(90% + 10px) !important;
+   min-width: 190px !important;
+}
+.trainerTable{
+  width: 80% !important;  
+}
+.ui-datepicker table {
+  font-size: 1em !important;
+}
